# databox

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  kind.yaml
.github/workflows/: release.yml
charts/databox/: Chart.yaml  values.yaml
clients/: README.md
clients/databoxjs/: README.md  package.json
clients/databoxpy/: README.md  pyproject.toml
clients/databoxpy/examples/: hello_layer.py
clients/databoxpy/src/databoxpy/: __init__.py  client.py
clients/databoxpy/tests/: smoke.py
clients/databoxts/: README.md  package.json  tsconfig.json
cmd/databox/: cli_client.go  console_cmd.go  main.go  ops_cmd.go  server_cmd.go  utils_cmd.go
cmd/kindrelay/: main.go
docs/: architecture.md  consistency.md  getting-started.md  gui.md  security.md
docs/admin/: backup-restore.md  bare-metal.md  kindrelay.md  kubernetes-cheatsheet.md  kubernetes.md  local-dev-kind.md
docs/layers/: README.md  s3.md  sql.md
e2e/: backup_test.go  bodycap_test.go  chaos_restart_test.go  chaos_shardsplit_test.go  chaos_support_test.go  chaos_watchresume_test.go  clustermap_test.go  consistency_test.go  decommission_test.go  deleterange_test.go  gateway_s3_test.go  gateway_sql_test.go  gateway_vector_test.go  grantsurfaces_test.go  harness_test.go  logout_test.go  mvcc_test.go  readindex_test.go  shutdown_test.go  theseus_test.go
pkg/assets/: cluster.js  embed.go  style.css
pkg/auth/: auth_test.go  grants.go  password.go  totp.go  totp_test.go  users.go
pkg/backup/: backup.go  dirdest.go  s3dest.go  sftpdest.go  sigv4.go
pkg/blob/: append.go  (+10 more)
sandbox/: README.md
(+745 files in other folders)
