[project]
name = "databoxpy"
version = "0.1.0"
description = "Python client for the databox database"
readme = "README.md"
authors = [
    { name = "SamInTheShell", email = "sam@hyperkube.org" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
